<resources>
  <string name="app_name">LowpolyRxExample</string>
  <string name="lowpoly_wait_loader_message">Generating lowpoly image. Please wait…</string>
  <string name="lowpoly_generation_error_message">Something went wrong</string>

  <string name="bitmap_async_example_fragment_name">Bitmap Async Example</string>
  <string name="drawable_async_example_fragment_name">Drawable Async Example</string>
  <string name="file_async_example_fragment_name">File Async Example</string>
  <string name="uri_async_example_fragment_name">Uri Async Example</string>
  <string name="bitmap_sync_example_fragment_name">Bitmap Sync Example</string>
  <string name="drawable_sync_example_fragment_name">Drawable Sync Example</string>
  <string name="file_sync_example_fragment_name">File Sync Example</string>
  <string name="uri_sync_example_fragment_name">Uri Sync Example</string>

  <string name="fragment_chooser_github_menu_text">Open Github Repo</string>

  <string name="fragment_example_lowpoly_button_text">Convert To Lowpoly</string>
  <string name="fragment_example_save_to_file_radio_group_text">Save lowpoly to :</string>
  <string name="fragment_example_save_to_file_radio_button_text">File</string>
  <string name="fragment_example_save_to_uri_radio_button_text">Uri</string>
  <string name="fragment_example_downscaling_factor_hint">Downscale Factor</string>
  <string name="fragment_example_maximum_width_hint">Maximum Width</string>
    <string name="base_fragment_permission_obtained_message">Permission granted successfully!</string>

</resources>
